ingress/ingress-definition-with-rules-host.yaml
# kubectl create -f ingress-definition.yaml
# kubectl describe ingress ingress-wear-watch

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend:
          serviceName: wear-service
          servicePort: 80 # NodePort
  
  - host: watch.my-online-store.com
    http:
      paths:    
      - backend:
          serviceName: watch-service
          servicePort: 80 # NodePort
