ingress/ingress-definition-with-rules.yaml
# kubectl create -f ingress-definition.yaml
# kubectl describe ingress ingress-wear-watch

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
  - http:
      paths:
      - path: /wear
        backend:
          serviceName: wear-service
          servicePort: 80 # NodePort
      
      - path: /watch
        backend:
          serviceName: watch-service
          servicePort: 80 # NodePort
